[package]
name = "mucrdt"
description = "A collection of well-tested CRDT implementations"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
blake2 = "0.10.6"
blake3 = { version = "1.5.1", features = ["digest", "serde", "traits-preview"] }
chrono = { version = "0.4.38", features = ["serde"] }
criterion = "0.5.1"
digest = "0.10.7"
ed25519-dalek = { version = "2.1.1", features = ["signature", "serde", "rand_core"] }
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.13.0"
owo-colors = "4.0.0"
paste = "1.0.15"
proptest = "1.4.0"
rand = { version = "0.8.5", features = ["serde"] }
schnorrkel = "0.11.4"
sha2 = "0.10.8"
termgraph = "0.4.0"
test-strategy = "0.3.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
