[package]
name = "mucrdt"
description = "A collection of well-tested CRDT implementations"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
digest = "0.10.7"
hex = { version = "0.4.3", features = ["serde"] }
paste = "1.0.15"
proptest = "1.4.0"
test-strategy = "0.3.1"
thiserror = "1.0.61"

# Hash Functions
blake2 = { version = "0.10.6", optional = true }
blake3 = { version = "1.5.1", features = [
  "digest",
  "serde",
  "traits-preview",
], optional = true }
sha2 = { version = "0.10.8", optional = true }

[features]
default = ["blake3"]
all_hashes = ["blake2", "blake3", "sha2"]
blake2 = ["dep:blake2"]
blake3 = ["dep:blake3"]
sha2 = ["dep:sha2"]
